--- a/ssm/ssm_put_parameter/Cargo.toml
+++ b/ssm/ssm_put_parameter/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "ssm_get_parameter"
+name = "ssm_put_parameter"
 version = "0.1.0"
-authors = [""]
+authors = ["Rilindo Foster <rilindo@monzell-labs.net>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
