Consolidated s3 create example

--- a/s3/s3_create_bucket/Cargo.toml
+++ b/s3/s3_create_bucket/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "s3_create_bucket_1"
+name = "s3_create_bucket"
 version = "0.1.0"
 authors = ["Rilindo Foster <rilindo@monzell-labs.net>"]
 edition = "2018"
