--- a/ec2/ec2_describe_security_groups/Cargo.toml
+++ b/ec2/ec2_describe_security_groups/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ec2_describe_vpcs_1"
+name = "ec2_describe_security_groups"
 version = "0.1.0"
 authors = ["Rilindo Foster <rilindo@monzell-labs.net>"]
 edition = "2018"
@@ -10,3 +10,4 @@ edition = "2018"
 tokio = {"version"= "0.2", features=["rt-threaded", "macros"]}
 rusoto_core = "0.45.0"
 rusoto_ec2 = "0.45.0"
+clap = "2.33.3"
