--- a/iam/iam_list_policies/Cargo.toml
+++ b/iam/iam_list_policies/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "iam_list_roles_2"
+name = "iam_list_policies"
 version = "0.1.0"
 authors = ["Rilindo Foster <rilindo@monzell-labs.net>"]
 edition = "2018"
