--- a/iam/iam_list_roles/Cargo.toml
+++ b/iam/iam_list_roles/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "iam_list_users_1"
+name = "iam_list_roles"
 version = "0.1.0"
 authors = ["Rilindo Foster <rilindo@monzell-labs.net>"]
 edition = "2018"
