--- a/sns/sns_create_topic/Cargo.toml
+++ b/sns/sns_create_topic/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sns_get_topic_attributes_1"
+name = "sns_create_topic"
 version = "0.1.0"
 authors = ["Rilindo Foster <rilindo@monzell-labs.net>"]
 edition = "2018"
@@ -10,3 +10,4 @@ edition = "2018"
 tokio = {"version"= "0.2", features=["rt-threaded", "macros"]}
 rusoto_core = "0.45.0"
 rusoto_sns = "0.45.0"
+clap = "2.33.3"
