--- a/sns/sns_list_topics/Cargo.toml
+++ b/sns/sns_list_topics/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sns_subscribe_1"
+name = "sns_list_topics"
 version = "0.1.0"
 authors = ["Rilindo Foster <rilindo@monzell-labs.net>"]
 edition = "2018"
